--- a/src/main/resources/application-debasis.properties
+++ b/src/main/resources/application-debasis.properties
@@ -8,3 +8,13 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# application.properties or application.yml
+
+college.email.domain=cutm.ac.in
+
+# Multiple domains
+college.email.domains=cutm.ac.in,silicon.edu.in,kit.college.edu
+
+# Optional validation flag
+college.email.validation.enabled=true
