--- a/src/main/resources/application-debasis.properties
+++ b/src/main/resources/application-debasis.properties
@@ -1,5 +1,6 @@
 server.port= 8088
 #local configuration of postgres db
+#server.servlet.context-path=pgrs
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pgrs
 spring.datasource.username=postgres
